menu databasega o'tkazilib login va logout hamda I18n Cache Warmup qilindi